Sonarfixer pluss noe reorganisering (#2621)